# cos30049-group9

./: README.md
ai4cyber/: README.md  data_processing.py  download_and_combine_datasets.py  eda.py  evaluate.py  main.py  models.py  predict.py  pyproject.toml  requirements.txt  sample_input.txt  train.py
ai4cyber/artifacts/: spam_test.joblib  spam_vectorizer.joblib
ai4cyber/data/: Deysi-spam-detection-dataset.csv
ai4cyber/data/raw_datasets/: texts.csv
ai4cyber/dataset_processing/: convert_and_combine_data.py  download_and_combine_datasets.py  feature_engineering.py
ai4cyber/models/: kmeans_pca.joblib  logreg.joblib  nb.joblib  rf.joblib  svm.joblib
ai4cyber/spamapp/: package-lock.json  package.json
backend/: README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py  models.py  predictor.py
backend/artifacts/: spam_scaler.joblib
backend/examples/: curl_examples.sh  frontend_examples.js  usage_example.py
backend/models/: logreg.joblib
spamapp/: package-lock.json  package.json
spamapp/src/: App.css  App.js  App.test.js  SpamDemo.js
