[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.119.0",
    "joblib>=1.5.2",
    "pandas>=2.3.3",
    "pydantic>=2.12.2",
    "pydantic-settings>=2.11.0",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "uvicorn>=0.37.0",
]
